experiments/yacc-examples/tson/y.output

state 0
	$accept: .json $end 

	LS  shift 16
	LC  shift 15
	TRUE  shift 12
	FALSE  shift 13
	NULL  shift 14
	STRING  shift 10
	NUMBER  shift 11
	.  error

	true  goto 5
	false  goto 6
	value  goto 2
	number  goto 4
	null  goto 7
	str  goto 3
	object  goto 8
	array  goto 9
	json  goto 1

state 1
	$accept:  json.$end 

	$end  accept
	.  error


state 2
	json:  value.    (1)

	.  reduce 1 (src line 37)


state 3
	value:  str.    (2)

	.  reduce 2 (src line 43)


state 4
	value:  number.    (3)

	.  reduce 3 (src line 48)


state 5
	value:  true.    (4)

	.  reduce 4 (src line 52)


state 6
	value:  false.    (5)

	.  reduce 5 (src line 56)


state 7
	value:  null.    (6)

	.  reduce 6 (src line 60)


state 8
	value:  object.    (7)

	.  reduce 7 (src line 64)


state 9
	value:  array.    (8)

	.  reduce 8 (src line 68)


state 10
	str:  STRING.    (16)

	.  reduce 16 (src line 109)


state 11
	number:  NUMBER.    (17)

	.  reduce 17 (src line 115)


state 12
	true:  TRUE.    (18)

	.  reduce 18 (src line 121)


state 13
	false:  FALSE.    (19)

	.  reduce 19 (src line 127)


state 14
	null:  NULL.    (20)

	.  reduce 20 (src line 133)


state 15
	object:  LC.object_data RC 
	object:  LC.RC 

	RC  shift 18
	STRING  shift 19
	.  error

	object_data  goto 17

state 16
	array:  LS.array_data RS 
	array:  LS.RS 

	LS  shift 16
	RS  shift 21
	LC  shift 15
	TRUE  shift 12
	FALSE  shift 13
	NULL  shift 14
	STRING  shift 10
	NUMBER  shift 11
	.  error

	true  goto 5
	false  goto 6
	value  goto 22
	number  goto 4
	null  goto 7
	str  goto 3
	object  goto 8
	array  goto 9
	array_data  goto 20

state 17
	object:  LC object_data.RC 

	RC  shift 23
	.  error


state 18
	object:  LC RC.    (10)

	.  reduce 10 (src line 78)


state 19
	object_data:  STRING.COLON value 

	COLON  shift 24
	.  error


state 20
	array:  LS array_data.RS 
	array_data:  array_data.COMMA value 

	COMMA  shift 26
	RS  shift 25
	.  error


state 21
	array:  LS RS.    (13)

	.  reduce 13 (src line 94)


state 22
	array_data:  value.    (14)

	.  reduce 14 (src line 99)


state 23
	object:  LC object_data RC.    (9)

	.  reduce 9 (src line 73)


state 24
	object_data:  STRING COLON.value 

	LS  shift 16
	LC  shift 15
	TRUE  shift 12
	FALSE  shift 13
	NULL  shift 14
	STRING  shift 10
	NUMBER  shift 11
	.  error

	true  goto 5
	false  goto 6
	value  goto 27
	number  goto 4
	null  goto 7
	str  goto 3
	object  goto 8
	array  goto 9

state 25
	array:  LS array_data RS.    (12)

	.  reduce 12 (src line 89)


state 26
	array_data:  array_data COMMA.value 

	LS  shift 16
	LC  shift 15
	TRUE  shift 12
	FALSE  shift 13
	NULL  shift 14
	STRING  shift 10
	NUMBER  shift 11
	.  error

	true  goto 5
	false  goto 6
	value  goto 28
	number  goto 4
	null  goto 7
	str  goto 3
	object  goto 8
	array  goto 9

state 27
	object_data:  STRING COLON value.    (11)

	.  reduce 11 (src line 83)


state 28
	array_data:  array_data COMMA value.    (15)

	.  reduce 15 (src line 104)


14 terminals, 12 nonterminals
21 grammar rules, 29/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
61 working sets used
memory: parser 38/240000
20 extra closures
35 shift entries, 1 exceptions
14 goto entries
21 entries saved by goto default
Optimizer space used: output 35/240000
35 table entries, 0 zero
maximum spread: 14, maximum offset: 26
